Added blank settings fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">DuckNews</string>
+
+    <!--Titles-->
+    <string name="recent_news">Recent News</string>
+    <string name="search_news">Search News</string>
+
+    <!--Buttons-->
+    <string name="reset_btn">Reset</string>
+    <string name="submit_btn">Submit</string>
+
+    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
+    <string name="settings_menu_item">Settings</string>
+
+    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
+    <string name="settings_title">Search Settings</string>
+
 </resources>
